# chunk_db

./: .gitignore  Cargo.toml  README.md
benchmarks/: README.md  plot_benchmark.py  plot_scaling.py  run_colgroups.sh  run_parametric.sh  run_scaling.sh
docs/: agents.md
examples/: README.md  chunkdb_vs_duckdb_benchmark.rs  column_scaling_benchmark.rs  parametric_benchmark.rs  playground.rs  query_benchmark.rs
notebooks/: guida_training_loop_pytorch.md
src/: error.rs  lib.rs
src/api/: database.rs  mod.rs
src/catalog/: hash_registry.rs  mod.rs  range_stats.rs  version_catalog.rs
src/concurrency/: compaction_lock.rs  mod.rs  snapshot.rs
src/config/: mod.rs  table_config.rs
src/partitioning/: column_groups.rs  mod.rs  range_dim.rs  row_index.rs
src/query/: chunk_merger.rs  direct_executor.rs  filter.rs  mod.rs  pruning.rs  query_builder.rs
src/storage/: chunk_cache.rs  chunk_coord.rs  chunk_naming.rs  mod.rs  parquet_writer.rs
src/write/: auto_compaction.rs  batch_insert.rs  compaction.rs  mod.rs  patch_apply.rs  patch_log.rs  stream_insert.rs
tests/: integration_test.rs
